# ImprovedUltrasoundRLRobot

./: .gitattributes  Collision Avoidance.txt  TwoArm_dual_arm_upgrade_collision_avoidance.ipynb-checkpoint.ipynb  pyproject.toml
DynamicModelling_and_EnvironmentRealism/: RightArm.urdf  stationary_simulation.py
Framework_for_Integration_into_Hardware/: rl_test_client.py
Framework_for_Integration_into_Hardware/Src/: CMakeLists.txt  USRobotControlConfig.h.in
Framework_for_Integration_into_Hardware/Src/Application/: CMakeLists.txt
Framework_for_Integration_into_Hardware/Src/Application/USRobotControlApp/: App.cpp  CMakeLists.txt  InputsWindow.cpp  InputsWindow.h  InputsWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MotorsWindow.cpp  MotorsWindow.h  MotorsWindow.ui  SensorsWindow.cpp  SensorsWindow.h  SensorsWindow.ui  StartupDialog.cpp  StartupDialog.h  StartupDialog.ui
Framework_for_Integration_into_Hardware/Src/CMake/: USRobotControlConfig.cmake
Framework_for_Integration_into_Hardware/Src/Components/: CMakeLists.txt
Framework_for_Integration_into_Hardware/Src/Components/ExternalInputs/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  ControlPanelInput.cpp  ControlPanelInput.h  ExternalInputs.cpp  ExternalInputs.h  IGTLInput.cpp  IGTLInput.h  Joystick.cpp  Joystick.h  JoystickInput.cpp  JoystickInput.h  RLInput.cpp  RLInput.h  SpaceMouse.cpp  SpaceMouse.h  SpaceMouseInput.cpp  SpaceMouseInput.h  SurfacePointsData.cpp  SurfacePointsData.h  SurfacePointsInput.cpp  SurfacePointsInput.h
Framework_for_Integration_into_Hardware/Src/Components/Kinematics/: CMakeLists.txt  IKinematics.cpp  IKinematics.h  Kinematics_1p0.cpp  Kinematics_1p0.h  Kinematics_2p2.cpp  Kinematics_2p2.h  Kinematics_3p3.cpp  Kinematics_3p3.h  Kinematics_3p4.cpp  Kinematics_3p4.h
Framework_for_Integration_into_Hardware/Src/Components/MotorControl/: AccelStepperMotors.cpp  AccelStepperMotors.h  CMakeLists.txt  IMotorControl.cpp  IMotorControl.h  MotorControl_accelStepper.cpp  MotorControl_accelStepper.h  MotorControl_simulator.cpp  MotorControl_simulator.h  SimulatedMotors.cpp  SimulatedMotors.h
Framework_for_Integration_into_Hardware/Src/Components/RobotControl/: CMakeLists.txt  RobotControl.cpp  RobotControl.h
Framework_for_Integration_into_Hardware/Src/Components/RobotPoseModel/: CMakeLists.txt  GJKCollisionDetection.cpp  GJKCollisionDetection.h  LinkData.cpp  LinkData.h  RobotPoseModel.cpp  RobotPoseModel.h
Framework_for_Integration_into_Hardware/Src/Components/ScanSpace/: CMakeLists.txt  ScanSpace.cpp  ScanSpace.h
Framework_for_Integration_into_Hardware/Src/Components/SensorControl/: ArduinoSensors.cpp  ArduinoSensors.h  CMakeLists.txt  CalibratedSensor.cpp  CalibratedSensor.h  ISensorControl.cpp  ISensorControl.h  SensorControl_viaArduino.cpp  SensorControl_viaArduino.h
Framework_for_Integration_into_Hardware/Src/Resources/: robotInfo.xml
One_Arm_Robot/code/: progressnew_1-.ipynb  progressnew_2_.ipynb
One_Arm_Robot/result/: phase2_orient_finetune_300k_cEuclid.txt  phase2_orient_finetune_300k_cQuat.txt  phase2_orient_finetune_300k_fEuclid.txt  phase2_orient_finetune_300k_fQuat.txt  phase2_orient_finetune_300k_mreward.txt  phase2_orient_finetune_300k_reward.txt  phase2_orient_finetune_300k_stdreward.txt  phase2_orient_finetune_300k_summary.json  progressnew_500k_cEuclid.txt  progressnew_500k_cQuat.txt  progressnew_500k_fEuclid.txt  progressnew_500k_fQuat.txt  progressnew_500k_mreward.txt  progressnew_500k_numterm.txt  progressnew_500k_reward.txt  progressnew_500k_stdreward.txt  progressnew_500k_summary.json
One_Arm_Robot/urdf/: RightArm.urdf
Two-Arm Robot/: DualArm.ipynb  TwoArm.ipynb  postprocessing.m  vec_normalize_stats_dual_r2_resume_postol02.pkl  vec_normalize_stats_dual_r2_resume_postol04.pkl  vec_normalize_stats_phase1.pkl  vec_normalize_stats_twoarm_bothEE.pkl
Two-Arm Robot/logs/: dualarm_monitor_cell5.monitor.csv  twoarm_both_ee_monitor.monitor.csv
Two-Arm Robot/matlab_data/: change_distances.csv  change_quaternion_diff.csv  episode_lengths.csv  final_distances.csv  final_quaternion_diff.csv  rewards.csv  success_rates.csv
