[project]
name = "ultrasound-project-git"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pybullet>=3.2.7",
    "stable-baselines3>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
